Realizado el primer deploy con las APIs de Login y Registro, terminado de pulir los modelos y las relaciones

--- a/Petopia_Server/appsettings.json
+++ b/Petopia_Server/appsettings.json
@@ -7,6 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PetopiaConnection": "DbVariable"
+    "PetopiaConnection": "DATABASE_URL_PETOPIA"
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 30
+      }
+    ]
   }
 }
