--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "9.96.4",
+    "@react-three/fiber": "8.15.15",
+    "@react-three/rapier": "1.3.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "0.160.0",
+    "meshline": "3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.25.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "three": "0.160.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
