--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "meshline": "3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
