--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "0.160.0",
+    "axios": "^1.7.2",
     "meshline": "3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
